--- a/HW2_CSV2JSON/.vscode/settings.json
+++ b/HW2_CSV2JSON/.vscode/settings.json
@@ -2,6 +2,7 @@
     "clang-format.executable": "/usr/bin/clang-format-4.0",
     "files.associations": {
         "iosfwd": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "sstream": "cpp"
     }
 }
