mv read csv to class ctor

--- a/HW2_CSV2JSON/.vscode/settings.json
+++ b/HW2_CSV2JSON/.vscode/settings.json
@@ -3,6 +3,8 @@
     "files.associations": {
         "iosfwd": "cpp",
         "fstream": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "future": "cpp",
+        "thread": "cpp"
     }
 }
