line to cell, BRUTE FORCE FORMAT MACROS

--- a/HW2_CSV2JSON/.vscode/settings.json
+++ b/HW2_CSV2JSON/.vscode/settings.json
@@ -5,6 +5,7 @@
         "fstream": "cpp",
         "sstream": "cpp",
         "future": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "string": "cpp"
     }
 }
