change vscode launch input and output file def

--- a/HW2_CSV2JSON/.vscode/launch.json
+++ b/HW2_CSV2JSON/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${fileDirname}/a.out",
             "args": [
-                "input.csv"
+                "~/Tmp/input.csv"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
