format output test, NEVER USE '~' in output define git add -ugit add -u

--- a/HW2_CSV2JSON/.vscode/launch.json
+++ b/HW2_CSV2JSON/.vscode/launch.json
@@ -10,7 +10,8 @@
             "request": "launch",
             "program": "${fileDirname}/a.out",
             "args": [
-                "~/Tmp/input.csv"
+                "/home/freshliver/Tmp/input.csv",
+                "4"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
