rename HW3 folder and ignore file_without_ext and some files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-**/*.out
+# Ignore all
+*
+# Unignore all with extensions
+!*.*
+# Unignore all dirs
+!*/
+
+**/*.db
+
 **/*.o
+**/*.out
+**/*.output*
+**/*.input*
+
 
