--- a/HW3_KeyValueStorage/FileEditor/.vscode/launch.json
+++ b/HW3_KeyValueStorage/FileEditor/.vscode/launch.json
@@ -22,7 +22,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: g++ build active file",
+            "preLaunchTask": "MAKEFILE",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
