--- a/HW3_KeyValueStorage/FileEditor/.vscode/tasks.json
+++ b/HW3_KeyValueStorage/FileEditor/.vscode/tasks.json
@@ -2,16 +2,13 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: g++ build active file",
-            "command": "/usr/bin/g++",
+            "label": "MAKEFILE",
+            "command": "/usr/bin/make",
             "args": [
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "--file=${fileDirname}/makefile",
             ],
             "options": {
-                "cwd": "/usr/bin"
+                "cwd": "${fileDirname}/"
             },
             "problemMatcher": [
                 "$gcc"
