--- a/HW3_KeyValueStorage/makefile
+++ b/HW3_KeyValueStorage/makefile
@@ -3,3 +3,7 @@ all:
 	g++ -g -c -std=c++14 ./KeyValueStorage.cpp -o KeyValueStorage.o
 	g++ -g -c -std=c++14 ./main.cpp -o main.o
 	g++ -g -std=c++14 -pthread DBWorker.o KeyValueStorage.o main.o -o main
+
+rm:
+	rm ./hw3example.output
+	rm -r ./db/
