fs.eof() AFTER getline & rm KVS.input and output, make fin, fout KVS member instead

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-**/*.out
+# Ignore all
+*
+# Unignore all with extensions
+!*.*
+# Unignore all dirs
+!*/
+# unignore makefile
+!makefile
+!Makefile
+
+**/*.db
+
 **/*.o
+**/*.out
+**/*.output*
+**/*.input*
+
 
