--- a/HW3_KeyValueStorage/.vscode/settings.json
+++ b/HW3_KeyValueStorage/.vscode/settings.json
@@ -49,6 +49,8 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "condition_variable": "cpp",
+        "map": "cpp"
     }
 }
