rm -f & printf progress every 10000 done

--- a/HW3_KeyValueStorage/makefile
+++ b/HW3_KeyValueStorage/makefile
@@ -4,6 +4,6 @@ all:
 	g++ -g -std=c++14 -pthread KeyValueStorage.o main.o -o main
 
 rm:
-	rm ./*.output
-	rm ./*.o
-	rm -r ./db/
+	rm -f ./*.output
+	rm -f ./*.o
+	rm -rf ./db/
