--- a/HW3_KeyValueStorage/.vscode/settings.json
+++ b/HW3_KeyValueStorage/.vscode/settings.json
@@ -50,6 +50,22 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "mutex": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "bitset": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "unordered_set": "cpp",
+        "future": "cpp",
+        "iomanip": "cpp",
+        "scoped_allocator": "cpp",
+        "regex": "cpp",
+        "typeindex": "cpp",
+        "valarray": "cpp"
     }
 }
